2007-06-13  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-base.c:
	start loading yelp-toc at start of
	base to take advantage of threading
	and make the toc load even quicker
	(except man pages of course)
	
	* src/yelp-toc.c:
	Make icon work (when the rest of the
	customisations are plumbed in)
	
	* src/yelp-utils.c:
	Fix result for TOC pages
	
	* src/yelp-document.c:
	Fix crash when canceling page request
	
	* src/yelp-window.c: 
	Implement canceling of requests
	Implement location dialog

2007-06-12  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-window.c: 
	* src/yelp-base.c:
	* src/yelp-window.h:
	* src/yelp-utils.c:
	* src/yelp-utils.h:
	* src/Makefile.am:
	* stylesheets/toc2html.xsl:
	First pass at making yelp work again
	Very, very broken, but TOC shows up (and is navigatable)
	Thought, nothing else works and is 
	liable to crash if used
	rename YELP_TYPE_* to YELP_SPOON_TYPE_*
	to stop conflict when compiling
	Oh, and introduce hundreds of compiler warnings
	
	* src/yelp-toc.c:
	* src/yelp-toc.h:
	Make TOC doc singleton
	
2007-06-12  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-utils.c: 
	Add ghelp resolve support
	Many minor fixes to pass default test suite

	* src/test-resolver.c: 
	Add default tests

	
2007-06-11  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-utils.c: 
	Add man page resolver support.  Make info fall back
	to man pages when not found

2007-06-11  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/test-resolver.c:
	Add gnome-vfs-init() and section (for results section)
	
	* src/yelp-utils.c: 
	Add support for resolving info and full path uri's.

	* src/yelp-utils.h:
	Add long description of resolver function
	
2007-06-02  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/test-resolver.c: 
	Bit more framework

	* src/yelp-utils.c:
	* src/yelp-utils.h:
	Beginnings of testing (sort-of recognises different types)
	Add enum for different types
	Add lots of printfs that should be removed at some point
	