@@ -1,5 +1,8 @@
 2007-06-13  Don Scorgie  <dscorgie@svn.gnome.org>
 
+	* src/yelp-window.c:
+	Make bookmarks work in the New World Order
+
 	* src/yelp-base.c:
 	start loading yelp-toc at start of
 	base to take advantage of threading
